After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733863 - 0.5 (commit 880d09fbff1f89f4ce5ed9ee5b1d23ccc6e20da2 ) breaks tracker compilation
0.5 (commit 880d09fbff1f89f4ce5ed9ee5b1d23ccc6e20da2 ) breaks tracker compila...
Status: RESOLVED FIXED
Product: libmediaart
Classification: Other
Component: Extraction
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libmediaart maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-07-28 13:30 UTC by Colin Walters
Modified: 2014-09-10 22:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Colin Walters 2014-07-28 13:30:35 UTC
Tracker is using media_art_init, but https://git.gnome.org/browse/libmediaart/commit/?id=880d09fbff1f89f4ce5ed9ee5b1d23ccc6e20da2
removes the API.

I'm going to tag libmediaart back before this commit, but I think the right fix is to reinstate it as a dummy function.
Comment 1 Martyn Russell 2014-07-28 14:41:44 UTC
(In reply to comment #0)
> Tracker is using media_art_init, but
> https://git.gnome.org/browse/libmediaart/commit/?id=880d09fbff1f89f4ce5ed9ee5b1d23ccc6e20da2
> removes the API.
> 
> I'm going to tag libmediaart back before this commit, but I think the right fix
> is to reinstate it as a dummy function.

Hi Colin, I am in the process of fixing Tracker master....

Adding the dummy functions isn't an option, the API previously was completely broken. The break is intentional :)
Comment 2 Colin Walters 2014-07-28 16:03:30 UTC
(In reply to comment #1)
> (In reply to comment #0)
> > Tracker is using media_art_init, but
> > https://git.gnome.org/browse/libmediaart/commit/?id=880d09fbff1f89f4ce5ed9ee5b1d23ccc6e20da2
> > removes the API.
> > 
> > I'm going to tag libmediaart back before this commit, but I think the right fix
> > is to reinstate it as a dummy function.
> 
> Hi Colin, I am in the process of fixing Tracker master....

Ok, can you untag gnome-continuous when done please?

> Adding the dummy functions isn't an option, the API previously was completely
> broken. The break is intentional :)

The new API makes sense, but you're going to get more complaints about this though I'm sure.
Comment 3 Martyn Russell 2014-07-29 08:22:55 UTC
I've committed this fix now btw:

commit a41cef78eb6d5c0a4728f08b4d4bd8f0a8f6ddfb
Author: Martyn Russell <martyn@lanedo.com>
Date:   Mon Jul 28 18:23:57 2014 +0200

    tracker-extract: Depend on libmediaart 0.5.0 when enabled
    
    This uses a new API which is not compatible with previous versions.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733863

I've not reverted the tag yet.
Comment 4 Martyn Russell 2014-09-10 08:45:36 UTC
(In reply to comment #3)
> I've committed this fix now btw:
> 
> commit a41cef78eb6d5c0a4728f08b4d4bd8f0a8f6ddfb
> Author: Martyn Russell <martyn@lanedo.com>
> Date:   Mon Jul 28 18:23:57 2014 +0200
> 
>     tracker-extract: Depend on libmediaart 0.5.0 when enabled
> 
>     This uses a new API which is not compatible with previous versions.
> 
>     https://bugzilla.gnome.org/show_bug.cgi?id=733863
> 
> I've not reverted the tag yet.

Colin, do I still need to untag gnome-continuous? If so, how do I do that? No idea about how gnome-continuous is managed.
Comment 5 Colin Walters 2014-09-10 22:30:43 UTC
(In reply to comment #4)

> Colin, do I still need to untag gnome-continuous? If so, how do I do that? No
> idea about how gnome-continuous is managed.

Already done:

https://git.gnome.org/browse/gnome-continuous/commit/?id=c05d8af11b65c2e0847ab18fcfc67f715dd983de