tracker-extract: Depend on libmediaart 0.5.0 when enabled

This uses a new API which is not compatible with previous versions.

https://bugzilla.gnome.org/show_bug.cgi?id=733863