src/libtracker-extract/tracker-extract-info.c
@@ -19,6 +19,8 @@
  * Author: Carlos Garnacho <carlos@lanedo.com>
  */
 
+#include "config.h"
+
 #include "tracker-extract-info.h"
 
 /**
@@ -45,6 +47,10 @@ struct _TrackerExtractInfo
 	GFile *file;
 	gchar *mimetype;
 	gchar *graph;
+
+#ifdef HAVE_LIBMEDIAART
+	MediaArtProcess *media_art_process;
+#endif
 
 	gint ref_count;
 };
@@ -83,6 +89,10 @@ tracker_extract_info_new (GFile       *file,
 	info->metadata = tracker_sparql_builder_new_embedded_insert ();
 
         info->where_clause = NULL;
+
+#ifdef HAVE_LIBMEDIAART
+        info->media_art_process = NULL;
+#endif
 
 	info->ref_count = 1;
 
@@ -294,3 +304,49 @@ tracker_extract_info_set_where_clause (TrackerExtractInfo *info,
 	g_free (info->where_clause);
 	info->where_clause = g_strdup (where);
 }
+
+#ifdef HAVE_LIBMEDIAART
+
+/**
+ * tracker_extract_info_get_media_art_process:
+ * @info: a #TrackerExtractInfo
+ *
+ * Returns the #MediaArtProcess object that can be used to retrieve
+ * and store media art caches found in extracted content.
+ *
+ * Returns: (transfer none): The #MediaArtProcess. This object should
+ * not be unreferenced.
+ *
+ * Since: 1.2
+ **/
+MediaArtProcess *
+tracker_extract_info_get_media_art_process (TrackerExtractInfo *info)
+{
+	g_return_if_fail (info != NULL);
+	return info->media_art_process;
+}
+
+/**
+ * tracker_extract_info_set_media_art_process:
+ * @info: a #TrackerExtractInfo
+ * @media_art_process: a #MediaArtProcess.
+ *
+ * Use @media_art_process for caching and looking up media art.
+ *
+ * Since: 1.2
+ **/
+void
+tracker_extract_info_set_media_art_process (TrackerExtractInfo *info,
+                                            MediaArtProcess    *media_art_process)
+{
+	g_return_if_fail (info != NULL);
+	g_return_if_fail (MEDIA_ART_IS_PROCESS (media_art_process));
+
+	if (info->media_art_process) {
+		g_object_unref (info->media_art_process);
+	}
+
+	info->media_art_process = g_object_ref (media_art_process);
+}
+
+#endif /* HAVE_LIBMEDIAART */
