src/tracker-extract/tracker-extract-libav.c
@@ -330,13 +330,27 @@ tracker_extract_get_metadata (TrackerExtractInfo *info)
 		}
 
 #ifdef HAVE_LIBMEDIAART
-		media_art_process (NULL,
-		                   0,
-		                   NULL,
-		                   MEDIA_ART_ALBUM,
-		                   album_artist,
-		                   album_title,
-		                   uri);
+		if (album_artist || album_title) {
+			MediaArtProcess *media_art_process;
+			GError *error = NULL;
+			gboolean success;
+
+			media_art_process = tracker_extract_info_get_media_art_process (info);
+			success = media_art_process_file (media_art_process,
+			                                  MEDIA_ART_ALBUM,
+			                                  MEDIA_ART_PROCESS_FLAGS_NONE,
+			                                  file,
+			                                  album_artist,
+			                                  album_title,
+			                                  &error);
+
+			if (!success || error) {
+				g_warning ("Could not process media art for '%s', %s",
+				           uri,
+				           error ? error->message : "No error given");
+				g_clear_error (&error);
+			}
+		}
 #endif
 
 		g_free(performer_uri);
